assets/css/style.css
body {
    margin: 0 auto;
    font-family: "Open Sans", sans-serif;
    color: #261C18;
    position: relative;
}

/*headings*/

h1, h2, h3, h4, h5, h6 {
font-family: "Poppins", sans-serif;
}

/* Background colors background-color: #986D32;*/
.bg--h{
background-color: #F9FAFC;
}
.bg--grey{ 
background-color: #D0D7D9;
background-color: #EBEEF2;
}
.bg--dark{
background-color: #262221;
}
.bg--navy{
background-color: #333D51 ;
}
.bg--brown{
background-color: #986D32;
}
.bg-beige{
background-color: #BFB6AE;
}
.bg--whiskey{

background-color:#D99E6A;
}
.bg--blue{
/*background-color: #1183a2;*/
background-color: #085669;
}
.bg--white{
background-color:#faf9f9;;
}

/*Text colors*/
/*
#e6e3df
#fffefd
*/

.txt-grey{
color: #B4ACA9;
}
.txt--dark{
color: #262221;
}
.txt--brown{
color: #986D32
}
.txt--white{
/*color: #faf9f9;*/
color: #fffefd;
}

/*border colors*/

b-white{
border-color: #faf9f9;
}


/*Nav bar*/
/*note*/
/*
navbar-light - dark font colour
navbar - navbar-dark for a light/white toggler 
*/

.navbar-nav {
padding-left: 5%;
}

navbar .navbar-toggler {
  border: 0;
}

.toggle-btn{
color: #fffefd; 
font-size:26px;
}
           
.navbar a{
    color: inherit;
    text-decoration: none;
    font-size: 90%;
}

.navbar .active{
text-decoration: underline;
}

.nav-pills .nav-link.active{
color: inherit;
font-weight: 700;
background-color: inherit;
}




/*Hero image & jumbotron*/

/*code w3cschool on how to do hero image, changed to linear gradient added to right, changed the rgba transparency*/

.hero-background{
    height: 90vh;
    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)), url("../images/cat_hero.jpg");
    background-position-x: 80%;
    background-position-y: center;
    background-repeat: no-repeat;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    overflow: hidden;
    position: relative;
}

.jumbotron-container{
    background: transparent;
    position: absolute;
    text-align: center;
    margin: 0;
    padding: 0;
    top: 100px;
}




/* Headings & Subheadings formatting*/

.section-heading{
    text-align: center;
    text-transform: uppercase;
    font-weight: 500;
}
.section-divider{
    width: 80px;
    height: 3px;
}
/*Section spacing*/

.section-layout {
padding-bottom: 25px;
padding-top: 25px;
min-height:95vh;
position: relative;
}

/*anchors*/

/*https://www.caktusgroup.com/blog/2017/10/23/css-tip-fixed-headers-and-section-anchors/*/
.anchors{
  display: block;
  position: absolute;
  top: -69px; 
  z-index: 5;
  /*visibility: hidden;*/
  border: 1px solid red;
}

/*test*/



/*Services section*/

.btn-style{
    background-color: transparent;
    border-radius: 5px;
    border: 1px solid;
    padding: 5px 10px 5px 10px;
    margin-top: 20px;
    margin-bottom: 20px;
}

/*about section*/

.portrait{
background-image: url("../images/portrait.jpg");
    background-position-x: 80%;
    background-position-y: top;
    background-repeat: no-repeat;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    overflow: hidden;
    position: relative;
    min-height: 250px;
}
.profile{
padding-top: 15px;
padding-left: 10px;
padding-right: 10px;
padding-bottom: 15px;
 text-align: justify;
  text-justify: inter-word;
  
}
.creds{
font-weight: 600;
padding-left: 25px;
list-style: none;
}
.creds i{
font-size: 20px;
}
/*Testimonials section*/

/*form*/



/*footer*/

footer{
margin: 0 auto;
padding-top: 30px;
text-align: center;
}
.ft-left{
margin-bottom: 15px;
}
.ft-right{
margin-bottom: 10px;
}
.footer-headings{
font-weight: 500;
}
.sm-icons{
font-size: 25px;
letter-spacing: 3px;
padding: 0px;
}

/*media queries sm 480px md */
@media only screen and (min-width: 768px) {
/*footer*/
.ft-left{
text-align: left;
padding-left: 3%;
margin-bottom: 10px;
}
.ft-right{
display: flex;
justify-content: flex-end;
padding-right: 3%;
}
.ft-right-element{
flex-basis: initial;

}

}

